# music_search_platform

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
deploy/ci/github/: ci.yml
deploy/docker-compose/: docker-compose.dev.yml
deploy/docker-compose/init-db/: 001_schema.sql  002_embeddings.sql
docs/: architecture.md  datasets.md  local-dev.md  models.md  plans.md  plans_checklist.md
libs/music_platform/: __init__.py  config.py  constants.py  db.py  fma.py  s3.py  schemas.py
libs/music_platform/audio/: __init__.py  load.py  spectrogram.py
libs/music_platform/inference/: __init__.py  musicnn.py
scripts/: batch_embed.py  download_fma.sh  download_models.sh  ingest_fma.py  smoke_musicnn.py
services/inference-audio/: Dockerfile  README.md
services/inference-audio/app/: main.py
tests/: conftest.py
tests/unit/: test_fma_paths.py  test_musicnn_embedder.py  test_spectrogram.py
